Fixing the coding examples page

--- a/scss/partials/_coding.scss
+++ b/scss/partials/_coding.scss
@@ -243,6 +243,36 @@
     
 }
 
+// Read more styles
+.readMoreExtra,
+.showLess,
+.readMore {
+    cursor: pointer;
+    color: #ff7e22;
+} 
+
+.showLess:hover,
+.readMore:hover {
+    text-decoration: underline;
+}
+
+.isMore {
+    display: none;
+}
+
+.showMore {
+    display: block;
+    margin-top: -70px;
+}
+
+.showLess{
+    display: none;
+}
+
+.showing{
+    display: block;
+}
+
 @media screen and (min-width:$breakpoint-small) {
 
     #coding-title {
