Fixed the last bits of styling that was noted

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -13,6 +13,7 @@ $linkedin-color: #0E76A8;
 $github-color: #24292E;
 
 // media query variables
+$breakpoint-xs: 400px;
 $breakpoint-small: 576px;
 $breakpoint-medium: 768px;
 $breakpoint-large: 992px;
