--- a/scss/partials/_coding.scss
+++ b/scss/partials/_coding.scss
@@ -122,7 +122,7 @@
 }
 
 #players_table {
-    padding: 0 0 0 800px;
+    padding: 0 0 0 742px;
 }
 
 #penalty_table {
@@ -130,7 +130,7 @@
 }
 
 #country_table {
-    padding: 0 0 0 280px;
+    padding: 0 0 0 237px;
 }
 
 #my_results {
@@ -281,6 +281,34 @@
     margin-top: -145px;
 } 
 
+#playerLess,
+#playerLess-One,
+#playerLess-Full,
+#players-readMore-Full,
+#players-readMore-one,
+#players-readMore {
+    padding-left: 40px;
+}
+
+#penaltyLess,
+#penalty-readMore {
+    padding-left: 60px;
+}
+
+@media screen and (min-width:$breakpoint-xs) {
+    #players_table {
+        padding: 0 0 0 602px;
+    }
+    
+    #penalty_table {
+        padding: 0 0px 0 195px;
+    }
+    
+    #country_table {
+        padding: 0 0 0 96px;
+    }
+}
+
 @media screen and (min-width:$breakpoint-small) {
 
     #coding-title {
@@ -298,15 +326,15 @@
     }
 
     #players_table {
-        padding: 0 0 0 450px;
+        padding: 0 0 0 309px;
     }
     
     #penalty_table {
-        padding: 0 0 0 50px;
+        padding: 0 80px 0 0px;
     }
     
     #country_table {
-        padding: 0 0 0 30px;
+        padding: 0 0 0 0px;
     }
 
     #my_results{
@@ -314,8 +342,14 @@
     }
 }
 
-@media screen and (min-width:1105px) {
-    #coding-container {
+@media screen and (min-width:$breakpoint-medium) {
+    #players_table {
+        padding: 0 0 0 243px;
+    }
+}
+
+@media screen and (min-width: $breakpoint-large) {
+       #coding-container {
         padding: 0 15px;
     }
 
@@ -324,13 +358,12 @@
     }
     
     #penalty_table {
-        padding: 0 0 0px 0px;
+        padding: 0 40px 0px 0px;
     }
     
     #country_table {
         padding: 0 0 0px 30px;
     }
-    
 }
 
 @media screen and (-ms-high-contrast: none) {
