--- a/style.css
+++ b/style.css
@@ -472,12 +472,12 @@ header {
   justify-content: space-around;
   align-content: center;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 25px;
 }
 
 #contact--area {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   justify-content: space-between;
   text-align: left;
   align-self: center;
@@ -601,7 +601,7 @@ header {
 }
 
 .messageDisplay {
-  display: flex;
+  display: block;
 }
 
 .success-bar {
