--- a/scss/partials/_contact.scss
+++ b/scss/partials/_contact.scss
@@ -57,13 +57,13 @@
 
 #contact-email-link {
     margin: 10px 0 0;
-    font-family: 'Roboto', sans-serif;
+    // font-family: 'Roboto', sans-serif;
 }
 
 .contact-form-input {
     margin: 15px 0 0;
     width: 100%;
-    font-family: 'Roboto', sans-serif;
+    // font-family: 'Roboto', sans-serif;
     color: $secondary-color;
     border-radius: 6px;
     border: $secondary-color;
