--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -49,7 +49,7 @@ header {
     text-align: center;
     align-items: center;
     justify-content: center;
-    font-family: 'Roboto', sans-serif;
+    // font-family: 'Roboto', sans-serif;
     font-size: 20px;
 }
 
