--- a/scss/partials/_navs.scss
+++ b/scss/partials/_navs.scss
@@ -9,7 +9,7 @@
     align-items: center;
     text-align: center;
     border-radius: 3px;
-    font-family: 'Roboto', sans-serif;
+    // font-family: 'Roboto', sans-serif;
     z-index: 5;
     padding: 5px 5px 5px 5px;
     position: fixed;
@@ -57,7 +57,7 @@
     text-align: center;
     background-color: $secondary-color;
     border-right: $fill-color 2px solid;
-    font-family: 'Roboto', sans-serif;
+    // font-family: 'Roboto', sans-serif;
     font-weight: 500;
     transform: translateX(-100%);
     transition: transform ease-in 250ms;
