--- a/scss/partials/_projects.scss
+++ b/scss/partials/_projects.scss
@@ -78,7 +78,7 @@
 }
 
 .project-title {
-    font-family: 'Roboto', sans-serif;
+    // font-family: 'Roboto', sans-serif;
     font-size: 20px;
     margin-top: 160px;
     margin-bottom: 10px;
