--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ time, mark, audio, video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
   vertical-align: baseline;
 }
 
@@ -58,7 +57,7 @@ html {
 
 body {
   background: #455680;
-  font-family: "Roboto Slab", serif;
+  font-family: "Roboto", sans-serif;
   align-content: center;
   justify-content: center;
   text-align: center;
@@ -73,7 +72,6 @@ body {
 }
 * a {
   text-decoration: none;
-  font-family: "Roboto", sans-serif;
 }
 
 h1,
@@ -82,7 +80,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Roboto", sans-serif;
   font-weight: 500;
 }
 
@@ -163,6 +160,7 @@ h6 {
 }
 .big-nav-list li {
   padding: 15px 0;
+  font-weight: 500;
 }
 
 .contact-me-link {
