--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -36,4 +36,47 @@ h6 {
 #menu-showing {
     transition: transform ease-in 250ms;
     justify-content: space-around;
+    display: flex;
+}
+
+#content-container {
+    margin-bottom: 100px;
+    width: 100%;
+    padding: 0 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 1400px;
+}
+
+#internal-title {
+    padding: 100px 0 50px;
+    font-size: 30px;
+}
+
+.content-card {
+    background: $tertiary-color;
+    margin: 50px auto 0;
+    width: 100%;
+    border-radius: 15px;
+    box-shadow: 10px 10px rgba(0,0,0,0.5);
+    padding: 25px 8px;
+    color: $alt-fill-color;
+}
+
+@media screen and (min-width:$breakpoint-small) {
+
+    #internal-title {
+        padding: 50px 0;
+        font-size: 45px;
+    }
+}
+
+@media screen and (min-width: $breakpoint-large) {
+
+    #content-container {
+     padding: 0 15px;
+    }
+
 }
