--- a/scss/partials/_coding.scss
+++ b/scss/partials/_coding.scss
@@ -1,26 +1,5 @@
 @use '../abstracts/index' as *;
 
-#coding-container {
-    margin-bottom: 100px;
-    width: 100%;
-    padding: 0 25px;
-}
-
-#coding-title {
-    padding: 100px 0 50px;
-    font-size: 30px;
-    }
-
-
-.coding-example {
-    background: $tertiary-color;
-    margin: 50px auto 0;
-    max-width: 1400px;
-    border-radius: 13px;
-    box-shadow: 7px 7px rgba(0,0,0,0.5);
-    padding: 25px 8px;
-}
-
 .coding-example-title {
     font-size: 25px;
     margin: 0 0 20px;
@@ -31,11 +10,6 @@
     max-width: 1400px;
     flex-basis: 240px;
     margin: 0 0 20px;
-}
-
-.coding-example-code-window {
-    height: 300px;
-    width: 100%;
 }
 
 .language-js,
@@ -66,7 +40,7 @@
     flex-direction: row;
     display: flex;
     width: 100%;
-    height: 100%;
+    //height: 50%;
     justify-content: space-around;
 }
 
@@ -83,16 +57,18 @@
 
 #SQL-image {
     width: 100%;
-    height: 100%;
+    //height: 100%;
 }
 
 #My_query {
     padding: 0 20px 30px;
-    
+    //max-height: 300px;
+    width: 100%;
 
     p{
         line-height: 1.5rem;
         min-width: 180px;
+        padding: 0 5px 10px;
     }
 }
 
@@ -132,7 +108,7 @@
 }
 
 #my_results {
-    padding: 0 0 0 280px;
+    padding: 0 0 0 300px;
 }
 
 //There are the different syntax colours used for the coding window
@@ -309,11 +285,6 @@
 
 @media screen and (min-width:$breakpoint-small) {
 
-    #coding-title {
-        padding: 50px 0;
-        font-size: 45px;
-    }
-
     #coding-example {
         padding: 50px 30px;
         box-shadow: 10px 10px rgba(0,0,0,0.5);
@@ -347,9 +318,6 @@
 }
 
 @media screen and (min-width: $breakpoint-large) {
-       #coding-container {
-        padding: 0 15px;
-    }
 
     #players_table {
         padding: 0 0 0px 0px;
