--- a/style.css
+++ b/style.css
@@ -86,8 +86,46 @@ h6 {
 #menu-showing {
   transition: transform ease-in 250ms;
   justify-content: space-around;
+  display: flex;
 }
 
+#content-container {
+  margin-bottom: 100px;
+  width: 100%;
+  padding: 0 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 1400px;
+}
+
+#internal-title {
+  padding: 100px 0 50px;
+  font-size: 30px;
+}
+
+.content-card {
+  background: #11CCED;
+  margin: 50px auto 0;
+  width: 100%;
+  border-radius: 15px;
+  box-shadow: 10px 10px rgba(0, 0, 0, 0.5);
+  padding: 25px 8px;
+  color: #000000;
+}
+
+@media screen and (min-width: 576px) {
+  #internal-title {
+    padding: 50px 0;
+    font-size: 45px;
+  }
+}
+@media screen and (min-width: 992px) {
+  #content-container {
+    padding: 0 15px;
+  }
+}
 .small-nav {
   width: 60px;
   height: 60px;
@@ -676,39 +714,6 @@ header {
     padding: 0 10px;
   }
 }
-#about-page {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
-}
-
-#about-container {
-  padding-bottom: 50px;
-  margin-bottom: 50px;
-  max-width: 1400px;
-}
-
-#about-me-paragraph {
-  background-color: #11CCED;
-  border-radius: 15px;
-  padding: 30px;
-  box-shadow: 10px 10px rgba(0, 0, 0, 0.5);
-  margin: 0 5% 50px;
-}
-#about-me-paragraph p {
-  color: #000000;
-}
-
-#about-title {
-  display: flex;
-  font-size: 30px;
-  padding-top: 100px;
-  padding-bottom: 100px;
-  align-items: center;
-  justify-content: center;
-}
-
 .about-first-line {
   color: #000000;
   font-size: 20px;
@@ -725,35 +730,6 @@ header {
 
 #about-scheme-link:hover {
   color: #000000;
-}
-
-@media screen and (min-width: 576px) {
-  #about-title {
-    font-size: 45px;
-    padding-top: 50px;
-  }
-}
-#SCSscheme-page {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-#SCSscheme-title {
-  display: flex;
-  padding: 100px 0;
-  font-size: 30px;
-  text-align: center;
-}
-
-#SCSscheme {
-  flex-direction: column;
-  margin-bottom: 50px;
-  justify-content: space-around;
-  align-items: center;
-  max-width: 1400px;
-  padding: 0 25px;
 }
 
 .SCSscheme--card {
@@ -788,46 +764,11 @@ header {
   text-decoration: underline;
 }
 
-@media screen and (min-width: 576px) {
-  #SCSscheme-title {
-    padding: 50px 0;
-    font-size: 45px;
-  }
-}
-@media screen and (min-width: 751px) {
-  #SCSscheme {
-    display: flex;
-  }
-}
 @media screen and (min-width: 1400px) {
   .SCSscheme--card {
     margin: 20px 0 20px;
   }
-
-  .SCSscheme-title {
-    width: 900px;
-  }
 }
-#coding-container {
-  margin-bottom: 100px;
-  width: 100%;
-  padding: 0 25px;
-}
-
-#coding-title {
-  padding: 100px 0 50px;
-  font-size: 30px;
-}
-
-.coding-example {
-  background: #11CCED;
-  margin: 50px auto 0;
-  max-width: 1400px;
-  border-radius: 13px;
-  box-shadow: 7px 7px rgba(0, 0, 0, 0.5);
-  padding: 25px 8px;
-}
-
 .coding-example-title {
   font-size: 25px;
   margin: 0 0 20px;
@@ -838,11 +779,6 @@ header {
   max-width: 1400px;
   flex-basis: 240px;
   margin: 0 0 20px;
-}
-
-.coding-example-code-window {
-  height: 300px;
-  width: 100%;
 }
 
 .language-js,
@@ -873,7 +809,6 @@ header {
   flex-direction: row;
   display: flex;
   width: 100%;
-  height: 100%;
   justify-content: space-around;
 }
 
@@ -888,15 +823,16 @@ header {
 
 #SQL-image {
   width: 100%;
-  height: 100%;
 }
 
 #My_query {
   padding: 0 20px 30px;
+  width: 100%;
 }
 #My_query p {
   line-height: 1.5rem;
   min-width: 180px;
+  padding: 0 5px 10px;
 }
 
 .SQL_column {
@@ -933,7 +869,7 @@ header {
 }
 
 #my_results {
-  padding: 0 0 0 280px;
+  padding: 0 0 0 300px;
 }
 
 .token-action {
@@ -1093,11 +1029,6 @@ header {
   }
 }
 @media screen and (min-width: 576px) {
-  #coding-title {
-    padding: 50px 0;
-    font-size: 45px;
-  }
-
   #coding-example {
     padding: 50px 30px;
     box-shadow: 10px 10px rgba(0, 0, 0, 0.5);
@@ -1129,10 +1060,6 @@ header {
   }
 }
 @media screen and (min-width: 992px) {
-  #coding-container {
-    padding: 0 15px;
-  }
-
   #players_table {
     padding: 0 0 0px 0px;
   }
