--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -38,7 +38,9 @@ h6 {
     justify-content: space-around;
 }
 
-
+.internalPage {
+    display: flex;
+}
 
 #content-container {
     margin-bottom: 100px;
