--- a/style.css
+++ b/style.css
@@ -88,6 +88,10 @@ h6 {
   justify-content: space-around;
 }
 
+.internalPage {
+  display: flex;
+}
+
 #content-container {
   margin-bottom: 100px;
   width: 100%;
