--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -12,6 +12,7 @@ body {
     text-align: center;
     background-size: contain;
     margin: 0 auto;
+    overflow-x: hidden;
 }
 
 *{
@@ -32,14 +33,18 @@ h6 {
     font-weight: 500;
 }
 
+.clickable{
+    cursor: pointer;
+}
 
 #menu-showing {
     transition: transform ease-in 250ms;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .internalPage {
     display: flex;
+    height: 100%;
 }
 
 #content-container {
@@ -49,7 +54,6 @@ h6 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     max-width: 1400px;
 }
 
