--- a/scss/partials/_coding.scss
+++ b/scss/partials/_coding.scss
@@ -25,6 +25,10 @@
     }
 }
 
+#apex{
+    margin: 0 0 0 -120px;
+}
+
 .language-html {
     font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
     font-size: 1em;
@@ -156,6 +160,18 @@
 }
 
 //This is the styling for when the menu is shown
+#menu-overlay::after {
+    top:     0;
+    right:   0;
+    position: absolute;
+    width:   0;
+    height:  0;
+    opacity: 0;
+    z-index: 10;
+    content: "";
+    background: rgba(0,0,0,.4);
+}
+
 .Nav-out {
     overflow-x: hidden;
 
@@ -180,27 +196,14 @@
         }
     }
 
-    #menu-overlay::after {
-        top:     0;
-        right:   0;
-        position: absolute;
-        width:   0;
-        height:  0;
-        opacity: 0;
-        z-index: 10;
-        content: "";
-        background: rgba(0,0,0,.4);
-        transition: opacity .5s,width .1s .5s,height .1s .5s;
-    }
-
-    #menu-showing {
-        transform: translateX(160px);
-
-        #menu-overlay::after{
+    #menu-overlay::after{
             width: 100%;
             height: 100%;
             opacity: .7;
         }
+
+    #menu-showing {
+        transform: translateX(160px);
     
         #about-page {
             transform: translateX(163px);
