--- a/scss/partials/_contact.scss
+++ b/scss/partials/_contact.scss
@@ -98,7 +98,7 @@
     border: $alt-fill-color 2px solid;
 }
 
-#scroll-up {
+#up-div {
     margin-top: 20px;
     padding-top: 20px;
     padding-bottom: 50px;
