--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -47,9 +47,10 @@ h6 {
     height: 100%;
 }
 
-#content-container {
+.content-container {
     margin-bottom: 100px;
     width: 100%;
+    height: 100%;
     padding: 0 25px;
     display: flex;
     flex-direction: column;
@@ -82,8 +83,8 @@ h6 {
 
 @media screen and (min-width: $breakpoint-large) {
 
-    #content-container {
-     padding: 0 15px;
+    .content-container {
+     padding: 0 50px;
     }
 
 }
