--- a/style.css
+++ b/style.css
@@ -98,9 +98,10 @@ h6 {
   height: 100%;
 }
 
-#content-container {
+.content-container {
   margin-bottom: 100px;
   width: 100%;
+  height: 100%;
   padding: 0 25px;
   display: flex;
   flex-direction: column;
@@ -130,8 +131,8 @@ h6 {
   }
 }
 @media screen and (min-width: 992px) {
-  #content-container {
-    padding: 0 15px;
+  .content-container {
+    padding: 0 50px;
   }
 }
 .small-nav {
@@ -175,7 +176,7 @@ h6 {
 
 .big-nav {
   height: 100%;
-  width: 168px;
+  width: 160px;
   position: fixed;
   z-index: 5;
   top: 0;
@@ -626,7 +627,7 @@ header {
 
 #form-status {
   border-radius: 25px;
-  z-index: 10;
+  z-index: 4;
   width: 250px;
   height: 50px;
   padding: 8px;
@@ -738,6 +739,10 @@ header {
 
 #about-scheme-link:hover {
   color: #000000;
+}
+
+#about-fix {
+  height: 100vh;
 }
 
 .SCSscheme--card {
@@ -962,6 +967,7 @@ header {
   width: 100%;
   height: 100%;
   opacity: 0.7;
+  touch-action: none;
 }
 .Nav-out #menu-showing {
   transform: translateX(160px);
